# pj_stock_v2

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/scripts/: clean_dart_corp_codes.py  clean_dart_dividends.py  clean_dart_financial_statement.py  clean_dart_financial_statements.py  clean_krx_daily_prices.py  clean_krx_listed_stocks.py  fetch_dart_corp_codes.py  fetch_dart_dividends.py  fetch_dart_financial_statement.py  fetch_dart_financial_statements.py  fetch_krx_daily_prices.py  fetch_krx_listed_stocks.py  init_db.py  reinit_db.py  run_evaluation_pipeline.py  run_krx_daily_price_pipeline.py  screen_undervalued_dividend_stocks.py  sync_financials_to_db.py  sync_krx_daily_prices_to_db.py  sync_krx_listed_stocks_to_db.py  test_portfolio.py
backend/src/pj_stock_backend/: main.py
backend/src/pj_stock_backend/api/: routes_portfolio.py  routes_stocks.py
backend/src/pj_stock_backend/cleaners/: dart_corp_cleaner.py  dart_dividend_cleaner.py  dart_financial_cleaner.py  krx_price_cleaner.py  krx_stock_cleaner.py
backend/src/pj_stock_backend/collectors/: dart_collector.py  krx_collector.py
backend/src/pj_stock_backend/core/: config.py
backend/src/pj_stock_backend/db/: sqlite.py
backend/src/pj_stock_backend/pipelines/: __init__.py  (+2 more)
backend/tests/: test_csv_storage.py  test_daily_price_repository.py  test_dart_corp_cleaner.py  test_dart_financial_cleaner.py  test_health.py  test_krx_collector.py  test_krx_daily_price_pipeline.py  test_krx_price_cleaner.py  test_krx_stock_cleaner.py  test_sqlite.py  test_undervalued_dividend_strategy.py
(+16 files in other folders)
